Fix sponsoring alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ p:last-child {
 }
 
 a {
-	color: #FF4365;
+	color: #FF438E;
 	text-decoration: none;
 }
 
@@ -290,18 +290,24 @@ section:nth-child(odd) + section::before {
 
 /* LAYOUT */
 
-.row,
-#methods {
+.row {
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-direction: row;
 	flex-direction: row;
 	-webkit-justify-content: center;
 	justify-content: center;
-	-webkit-align-items: center;
-	align-items: center;
+	-webkit-align-items: stretch;
+	align-items: stretch;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
+}
+
+.column {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	flex-direction: column;
 }
 
 .items2 > div,
@@ -638,7 +644,7 @@ input[type="radio"] + label:hover > .amount-input {
 }
 
 #packages ul {
-	margin: 1rem 0;
+	margin: 0.5rem 0 auto;
 }
 
 #packages li {
